# raylib-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  build.bat  build.ps1  build.sh
include/: config.h  config.h.in  game.hpp
source/: game.cpp  main.cpp
src/: game.cpp  main.cpp
